fix: overflow bug

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -90,7 +90,7 @@ ul {
 
 body {
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
